--- a/v1/templates/login.html
+++ b/v1/templates/login.html
@@ -50,7 +50,7 @@
 	    </fieldset>
     <div class="form-group">
       {{ form.submit(class="btn btn-outline-info") }}
-	</div>
+    </div>
     <small class="text-muted ml-2">
       <a href="#">Forgot Password?</a>
     </small>
@@ -58,7 +58,7 @@
   <div class="border-top pt-3">
     <small class="text-muted">
       Need An Account?
-      <a class="ml-2" href="{{url_for('home') }}">
+      <a class="ml-2" href="{{url_for('register') }}">
 	Register
       </a>
     </small>
