--- a/v1/templates/register.html
+++ b/v1/templates/register.html
@@ -1,81 +1,126 @@
-{% extends 'layout.html' %}
+{% extends "layout.html" %}
 {% block content %}
 
-<div class="content-signup">
-  <!-- action attr is just to specify which page will receive the data but when
-       empty the data will be stored in the same page it is -->
-  <form method="POST" action"">
+<section class="content-signup">
+  <!-- To be added code for registrationform -->
+  <form method="POST" action="">
     {{ form.hidden_tag() }}
     <fieldset class="form-group">
-      <legend class="border-bottom mb-4">Join Today</legend>
+      <!-- BEGINNING OF FEEDBACK ERROR MESSAGE BLOCK -->
+      <h2 class="border-bottom ml=5">Account Validation Information Required</h2>
       <div class="form-group">
+	<!-- Name label for input usr email -->
 	{{ form.name.label(class="form-control-label") }}
 
-	{% if form.name. %}
-	{{ form.name(class="form-control form_control-lg is-invalid") }}
-
+	{% if form.name.errors %}
+	{{ form.name(class="form-control form-control-lg is-invalid") }}
 	<div class="invalid-feedback">
 	  {% for error in form.name.errors %}
-	  <span>{{ error }}</span>
+	  <span>
+	    {{ error }}
+	  </span>
 	  {% endfor %}
 	</div>
 	{% else %}
 	{{ form.name(class="form-control form-control-lg") }}
 	{% endif %}
-
       </div>
+      <!-- Genre label for input usr email -->
+      <div class="form-group">
+	{{ form.genre.label(class="form-control-label") }}
+
+	{% if form.genre.errors %}
+	{{ form.genre(class="form-control form-control-lg is-invalid") }}
+	<div class="invalid-feedback">
+	  {% for error in form.genre.errors %}
+	  <span>
+	    {{ error }}
+	  </span>
+	  {% endfor %}
+	</div>
+	{% else %}
+	{{ form.genre(class="form-control form-control-lg") }}
+	{% endif %}
+      </div>
+      <!-- Instrument label for input usr email -->
+      <div class="form-group">
+	{{ form.instrument.label(class="form-control-label") }}
+
+	{% if form.instrument.errors %}
+	{{ form.instrument(class="form-control form-control-lg is-invalid") }}
+	<div class="invalid-feedback">
+	  {% for error in form.instrument.errors %}
+	  <span>
+	    {{ error }}
+	  </span>
+	  {% endfor %}
+	</div>
+	{% else %}
+	{{ form.instrument(class="form-control form-control-lg") }}
+	{% endif %}
+      </div>
+      <!-- Account registration information required -->
+      <h2 class="border-bottom ml=5">Account Personal Information Required</h2>
+      <!-- Email label for input usr email -->
       <div class="form-group">
 	{{ form.email.label(class="form-control-label") }}
-	{% if form.email.errors %}
-	{{ form.email(class="form-control form_control-lg is-invalid") }}
 
+	{% if form.email.errors %}
+	{{ form.email(class="form-control form-control-lg is-invalid") }}
 	<div class="invalid-feedback">
 	  {% for error in form.email.errors %}
-	  <span>{{ error }}</span>
+	  <span>
+	    {{ error }}
+	  </span>
 	  {% endfor %}
 	</div>
 	{% else %}
 	{{ form.email(class="form-control form-control-lg") }}
 	{% endif %}
       </div>
+      <!-- Password label for input usr email -->
       <div class="form-group">
 	{{ form.password.label(class="form-control-label") }}
 	{% if form.password.errors %}
-	{{ form.password(class="form-control form_control-lg is-invalid") }}
-
+	{{ form.password(class="form-control form-control-lg is-invalid") }}
 	<div class="invalid-feedback">
 	  {% for error in form.password.errors %}
-	  <span>{{ error }}</span>
+	  <span>
+	    {{ error }}
+	  </span>
 	  {% endfor %}
 	</div>
 	{% else %}
 	{{ form.password(class="form-control form-control-lg") }}
 	{% endif %}
       </div>
+      <!-- Confirm_password label for input usr email -->
       <div class="form-group">
 	{{ form.confirm_password.label(class="form-control-label") }}
 	{% if form.confirm_password.errors %}
-	{{ form.confirm_password(class="form-control form_control-lg is-invalid") }}
-
+	{{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
 	<div class="invalid-feedback">
 	  {% for error in form.confirm_password.errors %}
-	  <span>{{ error }}</span>
+	  <span>
+	    {{ error }}
+	  </span>
 	  {% endfor %}
 	</div>
 	{% else %}
 	{{ form.confirm_password(class="form-control form-control-lg") }}
 	{% endif %}
       </div>
+      <!-- END OF FEEDBACK ERROR MESSAGE BLOCK -->
     </fieldset>
     <div class="form-group">
-	{{ form.submit(class="btn btn-outline-info") }}
+      {{ form.submit(class="btn btn-outline-info") }}
     </div>
   </form>
-</div>
-<div class="border-top pt-3">
-  <small class="text-muted">
-    Already Have An Account? <a class="ml-2" href="{{url_for('login') }}">Sign In</a>
-  </small>
-</div>
+  <div class="border-top pt-3">
+    <small class="text-muted">
+      Already Have An Account? <a class="ml-2" href="{{url_for('login') }}">Sign In</a>
+    </small>
+  </div>
+</section>
 
-{% endblock content %}
+{% endblock %}
