--- a/v1/templates/register.html
+++ b/v1/templates/register.html
@@ -8,11 +8,8 @@
                             <li class="nav-item text-start"><a class="nav-link text-start" href="#" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Users</strong></a></li>
                             <li class="nav-item text-start"><a class="nav-link text-start" href="#" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>About</strong></a></li>
                         </ul>
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"><a class="btn btn-dark text-end" role="button" data-bss-hover-animate="flash" style="margin-right: 2px;margin-bottom: 2px;" href="/login">Sign In</a></li>
-                            <li class="nav-item"><a class="btn btn-dark text-end" role="button" data-bss-hover-animate="flash" style="margin-bottom: 2px;" href="/register">Sign Up</a></li>
-                        </ul>
-                    </div>
+                    </div><button class="btn btn-dark" type="button">Log Out</button>                        <button class="btn btn-dark" type="button" style="margin-left: 5px;"
+                        data-bs-target="#settings" data-bs-toggle="modal">Settings</button>
                 </div>
             </nav>
         </div>
