--- a/v1/templates/home.html
+++ b/v1/templates/home.html
@@ -1,6 +1,88 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<h1>HOME PAGE</h1>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>EscenApp</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700i&amp;display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="../static/styles/home.css">
+    <link rel="stylesheet" href="../static/images">
+</head>
+
+<body>
+    <section class="d-flex flex-column justify-content-between" id="home">
+        <div id="home_top">
+            <nav class="navbar navbar-light navbar-expand-md bg-light" style="border-bottom-style: solid;border-bottom-color: rgb(0,0,0);">
+              <div class="container-fluid"><a class="navbar-brand" href="/home"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navcol-1">
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item"><a class="nav-link active text-start" href="#artist" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Artists</strong></a></li>
+                            <li class="nav-item text-start"><a class="nav-link text-start" href="#user" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Users</strong></a></li>
+                            <li class="nav-item text-start"><a class="nav-link text-start" href="/about" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>About</strong></a></li>
+                        </ul>
+                        <ul class="navbar-nav ms-auto">
+			  {% if current_user.is_authenticated %}
+                          <li class="nav-item"><a class="btn btn-dark text-end" role="button" data-bss-hover-animate="flash" style="margin-right: 2px;margin-bottom: 2px;" href="/logout">Log Out</a></li>
+			  {% else %}
+			  <li class="nav-item"><a class="btn btn-dark text-end" role="button" data-bss-hover-animate="flash" style="margin-right: 2px;margin-bottom: 2px;" href="/login">Sign In</a></li>
+			  <li class="nav-item"><a class="btn btn-dark text-end" role="button" data-bss-hover-animate="flash" style="margin-bottom: 2px;" href="/register">Sign Up</a></li>
+			  {% endif %}
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <h2 class="display-1 text-black-50 tagline"><strong>Connecting you to your local scene.</strong></h2>
+        <div id="home_bottom">
+            <div class="container">
+                <div class="row text-center icons">
+                    <div class="col-3"><i class="fa fa-music"></i>
+                        <h3 class="text-center">Music</h3>
+                    </div>
+                    <div class="col-3"><i class="fa fa-paint-brush"></i>
+                        <h3 class="text-center">Artists</h3>
+                    </div>
+                    <div class="col-3"><i class="icon ion-mic-c"></i>
+                        <h3 class="text-center">Actors</h3>
+                    </div>
+                    <div class="col-3"><i class="fa fa-book"></i>
+                        <h3 class="text-center">Writers</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col"><button class="btn btn-link arrow-button" type="button" style="width: 100%;color: rgb(255,255,255);font-size: 32px;border-style: none;"><i class="icon ion-ios-arrow-down"></i></button></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="artist-user-info">
+        <div id="artist" class="container-fluid">
+            <div class="row g-0">
+                <div class="col-6 my-auto user-column">
+                    <h1 style="text-align: center;font-family: Montserrat, sans-serif;color: rgb(255, 255, 255);margin-top: 25px;"><strong>Artist</strong></h1>
+                    <p class="lead text-center" style="padding: 50px;font-family: Montserrat, sans-serif;">Are you an artist? Create an artist profile and add your events to our growing database of artistic and cultural events. Promote your events to our expanding user base to continue uniting our growing artistic scene.</p>
+                </div>
+                <div class="col-6 my-auto user-image" style="background: url(&quot;../static/images/pexels-karolina-grabowska-4471894.jpg&quot;) center / cover no-repeat;"><span></span></div>
+            </div>
+        </div>
+        <div id="user" class="container-fluid">
+            <div class="row g-0">
+                <div class="col-6 col-md-6 my-auto user-image" style="background: url(&quot;../static/images/pexels-luis-quintero-2014773.jpg&quot;) center / cover no-repeat;"><span></span></div>
+                <div class="col-6 col-md-6 my-auto user-image">
+                    <h1 style="text-align: center;font-family: Montserrat, sans-serif;font-weight: bold;margin-top: 25px;">Users</h1>
+                    <p class="lead text-center" style="padding: 50px;font-family: Montserrat, sans-serif;">Users are welcome to browse our artist generated database to find events that suit your liking near you. You can find live events such as live music, art, theatre, comedy and more. Never miss out on events near you and find new spots you may not have heard of yet.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+</body>
+
 
 {% endblock %}
