Cleaning/moving stuff in new dir for better reading, implementing jinja in new-event template, connecting static files to templates

--- a/v1/templates/login.html
+++ b/v1/templates/login.html
@@ -26,8 +26,8 @@
                 <div class="col-12 offset-xxl-4"
                     style="width: 500px;padding: 0px 0px 0px;padding-top: 0px;padding-right: 0px;padding-left: 0px;padding-bottom: 0px;">
                     <section class="content-signup" style="margin-top: 55px; margin-left: 50px;">
-                        <h2>Log-In</h2>
-                        <!-- To be added code for registrationform -->
+                        <h3>Log-In</h3>
+                        <!-- Start Content Jinja Code -->
                         <form method="POST" action"#">
                             {{ form.hidden_tag() }}
                             <fieldset class="form-group">
@@ -87,6 +87,7 @@
                                 </a>
                             </small>
                         </div>
+			<!-- End Content Jinja Code -->
                     </section>
                 </div>
             </div>
