--- a/v1/templates/new-event.html
+++ b/v1/templates/new-event.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar navbar-light navbar-expand-md bg-light">
         <div class="container-fluid"><a class="navbar-brand" href="#"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1"></div><a class="btn btn-dark" role="button" href="/artists">Back</a>
+            <div class="collapse navbar-collapse" id="navcol-1"></div><a class="btn btn-dark" role="button" href="/account">Back</a>
         </div>
     </nav>
     <main>
