--- a/v1/templates/account.html
+++ b/v1/templates/account.html
@@ -1,78 +1,65 @@
-{% extends "layout.html" %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap+Condensed:400,700i&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Black+Han+Sans&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700i&amp;display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="../static/styles/about.css">
+    <link rel="stylesheet" href="../static/styles/artists.css">
+    <link rel="stylesheet" href="../static/styles/Footer-Basic.css">
+    <link rel="stylesheet" href="../static/styles/home.css">
+    <link rel="stylesheet" href="../static/styles/users.css">
+</head>
 
-<a href="{{ url_for('users.logout') }}">Log out</a>
-<div class="content-section">
-  <div class="media">
-    <img class="rounded-circle account-img" src="{{ image_file }}">
-    <div class="media-body">
-      <h1 class="account-heading">{{ current_user.name }}</h1>
-      <p class="text-secondary"><h3>{{ current_user.email }}</h3></p>
-      <p class="text-secondary"><h3>{{ current_user.genre }}</h3></p>
-      <p class="text-secondary"><h3>{{ current_user.instrument }}</h3></p>
-      <p class="text-secondary"><h3>{{ current_user.biography }}</h3></p>
+<body>
+    <nav class="navbar navbar-light navbar-expand-md bg-light">
+        <div class="container-fluid"><a class="navbar-brand" href="#"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link active" href="/home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+                    <li class="nav-item"></li>
+                </ul>
+            </div><a href="{{ url_for('users.logout') }}"><button class="btn btn-dark" type="button">Log Out</button><a class="btn btn-dark" role="button" style="margin-left: 5px;" href="{{ url_for('posts.newEvent') }}">Add Event</a><a class="btn btn-dark" role="button" style="margin-left: 5px;" href="settings">Settings</a>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row" style="margin-top: 10px;">
+            <div class="col-6 text-center artist-col" style="border-style: double;"><img id="artist-img" src="https://via.placeholder.com/150?text=Artist+Image">
+              <p id="artist-p">{{ current_user.name }}</p>
+              <p id="artist-p">{{ current_user.genre }}</p>
+              <p id="artist-p">{{ current_user.instrument }}</p>
+	      <p id="artist-p">{{ current_user.email }}</p>
+            </div>
+            <div class="col-6 d-flex flex-grow-1 align-self-center" style="border-style: double;height: 70vh;">
+                <p class="lead text-center align-self-center" id="artist-p">{{ current_user.biography }}</p>
+            </div>
+        </div>
+        <div class="row g-0" style="margin-top: 10px;">
+            <div class="col-12 text-center">
+                <h1 style="border-style: double;">Events</h1>
+            </div>
+        </div>
+        <div class="row g-0">
+          <div class="col-12 text-center">
+	    {% for post in events %}
+                <ul id="event-list">
+                    <li><a href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></li>
+                    <li>{{ post.eventType }}</li>
+                    <li>{{ post.date }}</li>
+                    <li>{{ post.hour }}</li>
+                </ul>
+		{% endfor %}
+            </div>
+        </div>
     </div>
-    {% for post in events %}
-    <div class="article-metadata">
-      <a class="mr-2" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.event.name }}</a>
-    </div>
-    <p class="article-content">
-      {{ post.title }}
-      {{ post.eventType }}
-      {{ post.description }}
-      {{ post.date }}
-      {{ post.hour }}
-    </p>
-    {% endfor %}
-    <form method="POST" action="" enctype="multipart/form-data">
-      {{ form.hidden_tag() }}
-      <fieldset class="form-group">
-	<!-- BEGINNING OF FEEDBACK ERROR MESSAGE BLOCK -->
-	<legend class="border-bottom ml-4">Account Info</legend>
-	<div class="form-group">
-	<!-- Instrument label for input usr email -->
-	<!-- Email label for input usr email -->
-	<div class="form-group">
-	  {{ formE.email.label(class="form-control-label") }}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+</body>
 
-	  {% if formE.email.errors %}
-	  {{ formE.email(class="form-control form-control-lg is-invalid") }}
-	  <div class="invalid-feedback">
-	    {% for error in formE.email.errors %}
-	    <span>
-	      {{ error }}
-	    </span>
-	    {% endfor %}
-	  </div>
-	  {% else %}
-	  {{ formE.email(class="form-control form-control-lg") }}
-	  {% endif %}
-	</div>
-	<!-- Biography label for input usr below -->
-	<div class="form-group">
-	  {{ form.biography.label(class="form-control-label") }}
-	  {{ form.biography(class="form-control form-control-lg") }}
-	</div>
-	<!-- Picture label for input usr below -->
-	<div class="form-group">
-	  {{ form.picture.label() }}
-	  {{ form.picture(class="form-control-file") }}
-	  {% if form.picture.errors %}
-	  {% for error in form.picture.errors %}
-	  <span class="text-danger">
-	    {{ error }}
-	  </span>
-	  </br>
-	  {% endfor %}
-	  {% endif %}
-	</div>
-	<!-- END OF FEEDBACK ERROR MESSAGE BLOCK -->
-      </fieldset>
-      <div class="form-group">
-	{{ form.submit(class="btn btn-outline-info") }}
-      </div>
-    </form>
-  </div>
-
-{% endblock content %}
+</html>
