events and reset request updated

--- a/v1/static/filesToValidate/login/reset.css
+++ b/v1/static/filesToValidate/login/reset.css
@@ -8,10 +8,10 @@ body {
 }
   
 form {
-  margin-top: 120px;
+  margin-top: 100px;
   background: #ffffff;
-  height: 475px;
-  width: 500px;
+  height: 300px;
+  width: 550px;
   border-radius: 30px;
 }
 
@@ -20,17 +20,17 @@ form {
   font-weight: bold;
   border-bottom-style: solid;
   padding-bottom: auto;
-  padding-top: 25px;
+  padding-top: 10px;
 }
   
 #form-btn {
-  margin-top: 20px;
+  margin-top: 10px;
 
   }
 
 .btn-outline-info {
-  width: auto;
-  margin-top: 10px;
+  width: 200px;
+  margin-top: 0px;
   color: #050000;
   border-color: #080000;
 }
@@ -38,13 +38,21 @@ form {
 .btn-outline-info:hover {
     color: rgb(255, 255, 255);
     background-color: #000000;
-    border-color: #000000;
+    border-color: #0e0000;
+}
+
+.form-control-lg {
+    width: 475px;
+    min-height: calc(1.5em + 1rem + 2px);
+    padding: .5rem 1rem;
+    font-size: 1.25rem;
+    border-radius: .3rem;
 }
 
 fieldset {
   color:rgb(0, 0, 0);
   min-width: auto;
-  padding:20px;
+  padding: 35px;
   margin: 10px;
   border: 0;
 }
