--- a/v1/static/filesToValidate/register/register.css
+++ b/v1/static/filesToValidate/register/register.css
@@ -1,28 +1,44 @@
+body {
+  background: rgb(0,0,0);
+  color: rgb(0, 0, 0);
+}
+
+a {
+  color:rgb(8, 0, 0)
+}
+
+fieldset {
+  color:rgb(0, 0, 0);
+  min-width: 0;
+  padding:0;
+  margin: 40px;
+  border: 0;
+}
 .form-label {
     color: rgb(255, 255, 255);
   }
   
   form {
     margin-top: 20px;
-    background: #0e0101;
-    height: 750px;
-    border-radius: 30px;
+    background: #ffffff;
+    height: 720px;
+    border-radius: 40px;
   }
 
   #form-head {
-    color: rgb(247, 247, 247);
+    color: rgb(0, 0, 0);
     font-weight: bold;
     border-bottom-style: solid;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-    padding-top: 5px;
+    padding-bottom: 25px;
+    padding-top: 25px;
   }
   
   #form-btn {
-    margin-top: 40px;
+    margin-top: 25px;
   }
 
   .btn-outline-info {
+    margin-top: 20px;
     color: #f8f8f8;
     border-color: #f8f8f8;
 
@@ -34,3 +50,6 @@
     border-color: #ffffff;
   }
 
+  a {
+    color:rgb(255, 255, 255)
+  }
