--- a/v1/templates/errors/404.html
+++ b/v1/templates/errors/404.html
@@ -1,9 +1,35 @@
-{% extends "layout.html" %}
+{% extends "home.html" %}
 {% block content %}
 
-<span><h1>(404)</h1>
-  <br>
-  <h3>Invisible walls exist for a reason. Get back on route</h3>
-</span>
+<head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap+Condensed:400,700i&amp;display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Black+Han+Sans&amp;display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700i&amp;display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="../static/styles/account.css">
+  <link rel="stylesheet" href="../static/styles/home.css">
+</head>
 
+<body>
+  <nav class="navbar navbar-light navbar-expand-md bg-light">
+    <div class="container-fluid"><a class="navbar-brand" href="#"></a><button data-bs-toggle="collapse"
+        class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span
+          class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navcol-1"></div><a class="btn btn-dark" role="button"
+        href="/account">Back</a>
+    </div>
+  </nav>
+  <main>
+    <section>
+      <span>
+        <h1>(404)</h1>
+        <br>
+        <h3>Invisible walls exist for a reason. Get back on route</h3>
+      </span>
+    </section>
+  </main>
+</body>
 {% endblock content %}
