--- a/v1/templates/home.html
+++ b/v1/templates/home.html
@@ -70,14 +70,14 @@
                         <h1><strong>Artists</strong></h1>
                         <p class="lead text-center">Are you an artist? Create an artist profile and add your events to our growing database of artistic and cultural events. Promote your events to our expanding user base to continue uniting our growing artistic scene.</p>
                     </div>
-                    <div class="col-6 my-auto col-md-6 info-image" style="background: url('assets/img/pexels-karolina-grabowska-4471894.jpg') center / cover no-repeat;"><span></span></div>
+                    <div class="col-6 my-auto col-md-6 info-image" style="background: url('../static/images/pexels-karolina-grabowska-4471894.jpg') center / cover no-repeat;"><span></span></div>
                 </div>
             </div>
         </div>
         <div class="container-fluid" id="user">
             <div>
                 <div class="row g-0">
-                    <div class="col-6 col-md-6 my-auto info-image" style="background: url('assets/img/pexels-luis-quintero-2014773.jpg') center / cover no-repeat;"><span></span></div>
+                    <div class="col-6 col-md-6 my-auto info-image" style="background: url('../static/images/pexels-luis-quintero-2014773.jpg') center / cover no-repeat;"><span></span></div>
                     <div class="col-6 col-md-6 my-auto info-column">
                         <h1>Users</h1>
                         <p class="lead text-center">Users are welcome to browse our artist generated database to find events that suit your liking near you. You can find live events such as live music, art, theatre, comedy and more. Never miss out on events near you and find new spots you may not have heard of yet.</p>
@@ -92,14 +92,14 @@
                         <h1 style="margin-top: 25px;">Events</h1>
                         <p class="lead text-center" style="padding: 50px;font-family: Montserrat, sans-serif;">Find events near you and to your liking. Don't miss out on anything nearby. Everything goes from concerts to art expos to comedy shows and theatre. Everyone deserves their spot and everyone has the right to hear about it.</p>
                     </div>
-                    <div class="col-6 my-auto col-md-6 info-image" style="background: url('assets/img/panagiotis-falcos-akguWjJ1oR8-unsplash.jpg') center / cover no-repeat;"><span></span></div>
+                    <div class="col-6 my-auto col-md-6 info-image" style="background: url('../static/images/panagiotis-falcos-akguWjJ1oR8-unsplash.jpg') center / cover no-repeat;"><span></span></div>
                 </div>
             </div>
         </div>
         <div class="container-fluid" id="connect">
             <div>
                 <div class="row g-0">
-                    <div class="col-6 col-md-6 my-auto info-image" style="background: url('assets/img/alfonso-scarpa-e12EkMYv44U-unsplash.jpg') no-repeat;background-size: cover;"><span></span></div>
+                    <div class="col-6 col-md-6 my-auto info-image" style="background: url('../static/images/alfonso-scarpa-e12EkMYv44U-unsplash.jpg') no-repeat;background-size: cover;"><span></span></div>
                     <div class="col-6 col-md-6 my-auto info-column">
                         <h1>Connect</h1>
                         <p class="lead text-center">Connect with your favorite artists, connect with your favorite scene, and more importantly, connect with yourself. Your favorite events right at the reach of your fingertips. Get back into the world and enjoy what you love the most.</p>
@@ -114,19 +114,19 @@
                 <h2>Developed by</h2>
                 <div class="row" style="margin-top: 50px;">
                     <div class="col">
-                        <div class="image-container"><img class="rounded-circle" id="home-img" src="assets/img/DSC05686-Edit-2.jpg">
+                        <div class="image-container"><img class="rounded-circle" id="home-img" src="../static/images/dev/DSC05686-Edit-2.jpg">
                             <h5>Yared Torres</h5>
                             <p>Frontend</p>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="image-container"><img class="rounded-circle" id="home-img" src="assets/img/70630575.jpg">
+                        <div class="image-container"><img class="rounded-circle" id="home-img" src="../static/images/dev/70630575.jpg">
                             <h5>Kevin Ramos</h5>
                             <p>Backend</p>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="image-container"><img class="rounded-circle" id="home-img" src="assets/img/30163478.jpg">
+                        <div class="image-container"><img class="rounded-circle" id="home-img" src="../static/images/dev/30163478.jpg">
                             <h5>Sergio Vera</h5>
                             <p>Frontend/Backend</p>
                         </div>
