--- a/v1/static/styles/home.css
+++ b/v1/static/styles/home.css
@@ -6,17 +6,17 @@ body {
 #home {
   width: 100%;
   height: 100vh;
-  background: url("../images/pexels-peter-marjoram-4546984.jpg") center / cover no-repeat;
+  background: url("../../assets/img/pexels-peter-marjoram-4546984.jpg") center / cover no-repeat;
 }
 
 @media (min-width: 768px) {
   #home {
-    background: url("../images/pexels-sebastian-ervi-1763075.jpg") center / cover no-repeat;
+    background: url("../../assets/img/pexels-sebastian-ervi-1763075.jpg") center / cover no-repeat;
   }
 }
 
 .navbar-brand {
-  background: url("../images/f5219dda-9638-4c0d-8bfd-1a5b15961a09.sketchpad(2).png") center / 80% no-repeat;
+  background: url("../../assets/img/f5219dda-9638-4c0d-8bfd-1a5b15961a09.sketchpad(2).png") center / 80% no-repeat;
   width: 180px;
   height: 40px;
 }
@@ -40,45 +40,89 @@ body {
   font-size: 30px;
 }
 
-#artists-user-info {
+.p-0 {
+  padding: 0 !important;
+}
+
+.info {
   width: 50%;
   height: 50vh;
   flex: 0 0 auto;
   max-width: 100%;
 }
 
-@media (min-width: 300px) {
-  #artists-user-info {
-    width: 50%;
-    height: 50vh;
-    flex: 0 0 auto;
-    max-width: 100%;
-  }
-}
-
-.artist-column {
+.info-column {
   height: 100%;
 }
 
-.user-column {
-  height: 100%;
-}
-
-.user-image {
+.info-image {
   min-height: 30rem;
 }
 
+@media (min-width: 300px) {
+  #info p {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    padding: 50px;
+  }
+}
+
+@media (min-width: 576px) {
+  #info p {
+    font-size: 16px;
+  }
+}
+
+#info h1 {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  margin-top: 25px;
+}
+
 .credits {
-  padding-top: 5rem;
-  padding-bottom: 3rem;
+  padding-top: 2rem;
   background: var(--bs-gray-dark);
+}
+
+.credits {
+  height: 370px;
+}
+
+.credits p {
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  font-weight: bold;
+}
+
+.credits h2 {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+}
+
+.credits h5 {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
 }
 
 .image-container {
   text-align: center;
 }
 
-img {
+#home-img {
   width: 100px;
   height: 100px;
+  padding-bottom: 5px;
+}
+
+#about-btn {
+  margin-top: 15px;
+  font-family: Montserrat, sans-serif;
+}
+
+#return-btn {
+  font-family: Montserrat, sans-serif;
+  width: 100%;
+  height: 40px;
 }
