--- a/v1/static/styles/about.css
+++ b/v1/static/styles/about.css
@@ -1,6 +1,6 @@
-#about_bar {
+#about_top {
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 h1 {
@@ -9,43 +9,44 @@ h1 {
   text-align: center;
   margin-bottom: 30px;
   font-weight: bold;
-}
-
-#about_bio {
-  font-family: Montserrat, sans-serif;
-  text-align: center;
-  margin-left: 15px;
-  margin-right: 15px;
-  font-size: 25px;
-}
-
-#about_info {
-  border-style: solid;
-  border-color: rgb(44,41,41);
-}
-
-#page_2 {
-  width: 100%;
-  height: 100%;
+  text-decoration:  underline;
 }
 
 #description {
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
   font-size: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 @media (min-width: 768px) {
   #description {
     text-align: center;
     font-size: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 }
 
-@media (min-width: 992px) {
-  #description {
-    text-align: center;
-    font-size: 25px;
-  }
+.dev-block {
+  border: 5px double #333;
+  margin: 10px 0px;
+  text-align: center;
+}
+
+#about-img {
+  min-height: 50%;
+  min-width: 100%;
+  margin: 10px 0px;
+  border: 5px double #333;
+}
+
+.github {
+  width: 50px;
+  height: 50px;
+  background-color: #ffffff;
+  margin: 10px 0px;
 }
 
 .footer-basic {
